--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="136dp"
         android:fontFamily="@font/playfairdisplayregular"
         android:text="Summer Hits"
@@ -27,7 +27,8 @@
         android:layout_marginTop="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.573" />
 
     <ImageView
         android:id="@+id/menu"
@@ -46,8 +47,8 @@
         android:id="@+id/searchText"
         android:layout_width="331dp"
         android:layout_height="33dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/search_bg"
         android:drawableStart="@drawable/ic_search_black_24dp"
         android:drawableTint="#3A3737"
